<resources>
    <string name="app_name">MDAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_you_want">What you want</string>
    <string name="_91">+91</string>
    <string name="resend_otp_26">Resend OTP (%s)</string>
    <string name="submit">Submit</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="resend">Resend</string>
    <string name="add_trainee">Add Trainee</string>
    <string name="add_schemes">Add Schemes</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="pondichery">Pondichery</string>
    <string name="_4_5_120_reviews">%s | %s Reviews</string>
    <string name="trainee_exp">%s, %s years experience</string>
    <string name="hospital">Hospital</string>
    <string name="write_hospital_description">write Hospital Description…</string>
    <string name="place">Place…</string>
    <string name="hospital_name">hospital Name</string>
    <string name="person_name">Person Name</string>
    <string name="enter_house_name">Enter House Name</string>
    <string name="enter_panchayth_name">Enter Panchayth Name</string>
    <string name="name">Name : </string>
    <string name="house_name">House Name</string>
    <string name="address">Address…</string>
    <string name="let_s_find_your_hospitals">Let’s find your hospitals</string>
    <string name="let_s_trainee">Let’s Look your trainees</string>
    <string name="let_s_trainee_av">Let’s Find yours Available trainees</string>
    <string name="let_scheme">Let’s Find yours All Schemes</string>
    <string name="let_scheme_av">Let’s Find yours All Available Schemes</string>
    <string name="let_scheme_pn">Let’s Find yours Pending Schemes</string>
    <string name="let_scheme_rj">Let’s Find yours Reject Schemes</string>
    <string name="let_s_find_your_users">Let’s find your Users</string>
    <string name="schemes">Schemes</string>
    <string name="show_all">Show All</string>
    <string name="sandeep">sandeep</string>
    <string name="paingottoor">Paingottoor</string>
    <string name="amount">Amount</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_guardian_name">Enter Guardian Name</string>
    <string name="enter_uid_number">Enter UID Number</string>
    <string name="how_much_percentage_you_have">How much percentage You have</string>
    <string name="code_has_been_send_to_91_84_61">Code has been send to +91 %s</string>
    <string name="disability_certificate">Disability Certificate</string>
    <string name="uid_certificate">UID Certificate</string>
    <string name="guardian_uid_certificate">Guardian UID Certificate</string>
    <string name="disability">Disability :</string>
    <string name="low_vission">Low Vission</string>
    <string name="percentage">Percentage :</string>
    <string name="_40">%s %</string>
    <string name="trainee_name">Trainee Name</string>
    <string name="experience">Experience</string>
    <string name="enter_hospital_details">Enter Hospital Details</string>
    <string name="apply">Apply</string>
    <string name="scheme_details">Scheme Details</string>
    <string name="believe_you_can_and_you_re_halfway_there">Believe you can and you\'re halfway there</string>
    <string name="end_date_s">End Date :<font color="#007DFE">%s</font></string>
    <string name="eranakulam">Eranakulam</string>

</resources>