<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.admin.person.viewPersonDetailsFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/domo"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/lato"
        android:text="Antony Giroud"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/lato"
        android:text="9497039910"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/houseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/lato"
        android:text="Karippayil"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/aadhar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:textColor="@color/textColor"
        android:layout_marginTop="@dimen/_4sdp"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/houseName" />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_250sdp"
        android:background="#F1F8FF"
        android:layout_marginBottom="@dimen/_60sdp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintTop_toBottomOf="@+id/aadhar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/disability"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/disability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_vission"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@id/textView14"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="@id/textView14"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="148dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/percentage"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView14" />

            <TextView
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_40"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@id/textView15"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toTopOf="@id/textView15" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/disability_certificate"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView15" />


            <ImageView
                android:id="@+id/imgDisability"
                style="@style/editText"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/edit_background"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />


            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/uid_certificate"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgDisability" />


            <ImageView
                android:id="@+id/imgUid"
                style="@style/editText"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/edit_background"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="Guardian Name : "
                android:textColor="@color/mainColor"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgUid" />

            <TextView
                android:id="@+id/guardian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sab "
                android:textColor="@color/textColor"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@id/textView18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.134"
                app:layout_constraintStart_toEndOf="@+id/textView18"
                app:layout_constraintTop_toTopOf="@id/textView18"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/guardian_uid_certificate"
                android:textColor="@color/mainColor"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView18" />


            <ImageView
                android:id="@+id/imgGuardian"
                style="@style/editText"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/edit_background"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApprove"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/button"
            android:text="Approve"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/button"
            android:text="Reject"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>